--- a/Alejandro_Zamora_Entrega_Final/Solution/projects/vs-2022/OpenGL example.vcxproj.filters
+++ b/Alejandro_Zamora_Entrega_Final/Solution/projects/vs-2022/OpenGL example.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="..\..\code\Cone.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\code\Mesh.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\code\Scene.hpp">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\code\Cone.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\code\Mesh.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
