--- a/Alejandro_Zamora_Entrega_Final/Solution/projects/vs-2022/OpenGL example.vcxproj.filters
+++ b/Alejandro_Zamora_Entrega_Final/Solution/projects/vs-2022/OpenGL example.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClCompile Include="..\..\code\Mesh.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\code\Texture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\code\Model.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\code\Scene.hpp">
@@ -60,6 +66,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\code\Mesh.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\code\Texture.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\code\Model.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
